# PersonViT

./: .gitignore  LICENSE  main.py  pyproject.toml  test_data.py
transreid_pytorch/: test.py  train.py  vis_rank.py
transreid_pytorch/configs/cmsmt17/: vit_base_ics_384.yml
transreid_pytorch/datasets/: custom_dataset.py  make_dataloader.py
transreid_pytorch/processor/: processor.py
transreid_pytorch/utils/: metrics.py
